--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "cra-template-typescript": "1.2.0",
+    "dwv": "^0.34.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
   },
@@ -35,8 +38,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1"
   }
 }
